# cyqstats

./: LICENSE  MANIFEST.in  pyproject.toml  readme.md  setup.py
.github/workflows/: publish-main.yml
src/cyqstats/: _cycore.c  core.py  setup.py
src/cyqstats.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/cyquant/: __init__.py  _cycore.pyx  core.py  grouped.py
tests/: test_core.py  test_grouped.py
