[build-system]
requires = ["setuptools>=61", "wheel", "Cython>=3.0", "numpy>=1.23"]
build-backend = "setuptools.build_meta"

[project]
name = "cyquant"
version = "0.1.0"
description = "Streaming statistics and grouped aggregations for large event streams"
readme = "readme.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Cyquant Contributors" }]
dependencies = ["numpy>=1.23"]

[project.optional-dependencies]
dev = ["pytest>=7.4", "Cython>=3.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
